k8s-ingress-test/ingress-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
  namespace: tools
  annotations:
    kubernetes.io/ingress.global-static-ip-name: murodbey
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:

  - host: vault.shermat.com
    http:
      paths:
      - backend:
          serviceName: vault-service
          servicePort: 8083

  - host: nexus.shermat.com
    http:
      paths:
      - backend:
          serviceName: nexus-service
          servicePort: 8081

  - host: grafana.shermat.com
    http:
      paths:
      - backend:
          serviceName: grafana-service
          servicePort: 8082
